--- a/index.html
+++ b/index.html
@@ -163,55 +163,61 @@ window.onclick = function(event) {
 
 </div>
 <div class="title1">
-        <b>Расписание на 07.09.2025</b> 
-        <p>10:02:</p>
+        <b>Расписание на 08.09.2025</b> 
+        <p>8:00 МСК:</p>
+        <p>- Дом забытых вещей</p>
+        <p>8:15 МСК:</p>
         <p>- "ВЕЛОМАРШРУТ" - Некрасовка, Косино-Ухтомский, Новокосино</p>
-        <p>10:20:</p>
+        <p>8:35 МСК:</p>
         <p>- К/ф "Черепаха"</p>
-        <p>С 10:45:</p>
+        <p>С 9:00 МСК:</p>
         <p>- Фильм "Чудеса случаются"</p>
         <p>- Короткометражный фильм "Страйдер"</p>
         <p>- Короткометражный фильм "Семейная связь"</p>
         <p>- "Импульс - шаг в будущее"</p>
         <p>- Короткометражный фильм "Беседа"</p>
         <p>- Короткометражный фильм "Скейт"</p>
-        <p>12:00:</p>
-        <p>- Дом забытых вещей</p>
-        <p>12:10:</p>
-        <p>- К/Ф "Скейт"</p>
-        <p>12:25:</p>
+        <p>10:25 МСК:</p>
         <p>- К/Ф "ЭГО"</p>
-        <p>12:45:</p>
+        <p>10:45 МСК:</p>
         <p>- "ВЕЛОМАРШРУТ" - Некрасовка, Косино-Ухтомский, Новокосино</p>
-        <p>13:05:</p>
+        <p>11:00 МСК:</p>
         <p>- К/Ф "Карачун"</p>
-        <p>С 13:30:</p>
+        <p>11:25 МСК:</p>
+        <p>- Дом забытых вещей</p>
+        <p>С 11:40 МСК:</p>
         <p>- Фильм "Чудеса случаются"</p>
         <p>- Короткометражный фильм "Страйдер"</p>
         <p>- Короткометражный фильм "Семейная связь"</p>
         <p>- "Импульс - шаг в будущее"</p>
         <p>- Короткометражный фильм "Беседа"</p>
         <p>- Короткометражный фильм "Скейт"</p>
-        <p>16:00:</p>
+        <p>13:25 МСК:</p>
+        <p>- Семейная связь</p>
+        <p>14:15 МСК:</p>
         <p>- К/ф "Черепаха"</p>
-        <p>16:25:</p>
-        <p>- Дом забытых вещей</p>
-        <p>18:40:</p>
+        <p>16:15 МСК:</p>
         <p>- К/Ф "ЭГО"</p>
-        <p>19:00:</p>
+        <p>16:40 МСК:</p>
         <p>- "ВЕЛОМАРШРУТ" - Некрасовка, Косино-Ухтомский, Новокосино</p>
-        <p>19:20:</p>
+        <p>17:00 МСК:</p>
         <p>- К/Ф "Карачун"</p>
-        <p>19:45:</p>
-        <p>- Реальность полёта <mark>По воскресеньям</mark></p>
-        <p>20:30:</p>
+        <p>17:20 МСК:</p>
+        <p>- Дом забытых вещей</p>
+        <p>17:35 МСК:</p>
         <p>- К/ф "Черепаха"</p>
-        <p>С 20:50:</p>
+        <p>С 18:00 МСК:</p>
         <p>Продолжение вещания</p>
-        <p>21:45:</p>
+        <p>20:10 МСК:</p>
         <p>- Дом забытых вещей</p>
-        <p>22:20:</p>
-        <p>- К/ф "Семейная связь"</p>
+        <p>21:50 МСК:</p>
+        <p>- К/ф "Беседа"</p>
+        <p>22:36 МСК:</p>
+        <p>- "ВЕЛОМАРШРУТ" - Некрасовка, Косино-Ухтомский, Новокосино</p>
+        <p>23:15 МСК:</p>
+        <p>- Короткометражный фильм "Семейная связь"</p>
+        <p>С 23:30 МСК:</p>
+        <p>Продолжение вещания</p>
 
 
 
