--- a/livetv.html
+++ b/livetv.html
@@ -159,57 +159,7 @@ window.onclick = function(event) {
      </div>
      <div class="title1">
         <b>Расписание на 12.09.2025</b> 
-        <p>8:00:</p>
-        <p>- Неудачные дубли телепередачи "ВЕЛОМАРШРУТ"</p>
-        <p>8:02:</p>
-        <p>- "ВЕЛОМАРШРУТ" - Некрасовка, Косино-Ухтомский, Новокосино</p>
-        <p>С 8:20:</p>
-        <p>- Фильм "Чудеса случаются"</p>
-        <p>- Короткометражный фильм "Страйдер" (18+)</p>
-        <p>- "Импульс - шаг в будущее"</p>
-        <p>- Короткометражный фильм "Беседа"</p>
-        <p>- Короткометражный фильм "Скейт"</p>
-        <p>9:45:</p>
-        <p>- К/Ф "ЭГО"</p>
-        <p>10:10:</p>
-        <p>- "ВЕЛОМАРШРУТ" - Некрасовка, Косино-Ухтомский, Новокосино</p>
-        <p>10:25:</p>
-        <p>- Дом забытых вещей</p>
-        <p>10:35:</p>
-        <p>- К/Ф "Карачун"</p>
-        <p>11:15:</p>
-        <p>Продолжение вещания</p>
-        <p>11:40:</p>
-        <p>- Дом забытых вещей</p>
-        <p>12:40:</p>
-        <p>- Чудеса случаются</p>
-        <p>14:25:</p>
-        <p>- Страйдер (18+)</p>
-        <p>14:35:</p>
-        <p>- Страйдер 2 (18+)</p>
-        <p>14:45:</p>
-        <p>- Семейная связь</p>
-        <p>16:40:</p>
-        <p>- Дом забытых вещей</p>
-        <p>16:55:</p>
-        <p>- Там, где горы встречаются с морем<mark>По пятницам</mark></p>
-        <p>17:30:</p>
-        <p>Продолжение вещания</p>
-        <p>18:35:</p>
-        <p>- Импульс - шаг в будущее</p>
-        <p>19:30:</p>
-        <p>- Страйдер (18+)</p>
-        <p>19:40:</p>
-        <p>- Страйдер 2 (18+)</p>
-        <p>20:50:</p>
-        <p>Там, где горы встречаются с морем</p>
-        <p>21:30:</p>
-        <p>- "ВЕЛОМАРШРУТ" - Некрасовка, Косино-Ухтомский, Новокосино</p>
-        <p>22:05:</p>
-        <p>- Дом забытых вещей</p>
-        <p>22:15:</p>
-        <p>Продолжение вещания</p>
-        <!-- <p>10:00:</p>
+        <p>10:00:</p>
         <p>- Дом забытых вещей</p>
         <p>10:15:</p>
         <p>- "ВЕЛОМАРШРУТ" - Некрасовка, Косино-Ухтомский, Новокосино</p>
@@ -257,11 +207,11 @@ window.onclick = function(event) {
         <p>- Дом забытых вещей</p>
         <p>23:50:</p>
         <p>- К/ф "Беседа"</p>
-        <b>Расписание на 02.09.2025</b> 
+        <b>Расписание на 14.09.2025</b> 
         <p>00:45:</p>
         <p>- "ВЕЛОМАРШРУТ" - Некрасовка, Косино-Ухтомский, Новокосино</p>
         <p>00:55:</p>
-        <p>Перерыв вещания</p> -->
+        <p>Перерыв вещания</p>
 
    </div>
 </div>
