--- a/livetv.html
+++ b/livetv.html
@@ -158,60 +158,56 @@ window.onclick = function(event) {
           <iframe src="https://vk.com/video_ext.php?oid=-214689242&id=456239083&hd=1&autoplay=1" width="640" height="360" allow="encrypted-media; fullscreen; picture-in-picture; screen-wake-lock;" frameborder="0" allowfullscreen></iframe>
      </div>
      <div class="title1">
-        <b>Расписание на 18.09.2025</b>
-<!--         <p>8:00:</p>
-        <p>- Дом забытых вещей</p>
-        <p>8:15:</p>
+        <b>Расписание на 19.09.2025</b> 
+        <p>8:00:</p>
+        <p>- Неудачные дубли телепередачи "ВЕЛОМАРШРУТ"</p>
+        <p>8:02:</p>
         <p>- "ВЕЛОМАРШРУТ" - Некрасовка, Косино-Ухтомский, Новокосино</p>
-        <p>8:35:</p>
-        <p>- К/ф "Черепаха"</p> -->
-        <p>С 8:00:</p>
+        <p>С 8:20:</p>
         <p>- Фильм "Чудеса случаются"</p>
-        <p>- Короткометражный фильм "Страйдер"</p>
-        <p>- Короткометражный фильм "Семейная связь"</p>
+        <p>- Короткометражный фильм "Страйдер" (18+)</p>
         <p>- "Импульс - шаг в будущее"</p>
         <p>- Короткометражный фильм "Беседа"</p>
         <p>- Короткометражный фильм "Скейт"</p>
-        <p>9:25:</p>
-        <p>- К/Ф "ЭГО"</p>
         <p>9:45:</p>
+        <p>- К/Ф "ЭГО"</p>
+        <p>10:10:</p>
         <p>- "ВЕЛОМАРШРУТ" - Некрасовка, Косино-Ухтомский, Новокосино</p>
-        <p>10:00:</p>
-        <p>- К/Ф "Карачун"</p>
         <p>10:25:</p>
         <p>- Дом забытых вещей</p>
-        <p>С 10:40:</p>
-        <p>- Фильм "Чудеса случаются"</p>
-        <p>- Короткометражный фильм "Страйдер"</p>
-        <p>- Короткометражный фильм "Семейная связь"</p>
-        <p>- "Импульс - шаг в будущее"</p>
-        <p>- Короткометражный фильм "Беседа"</p>
-        <p>- Короткометражный фильм "Скейт"</p>
-        <p>12:25:</p>
-        <p>- Семейная связь</p>
-        <p>13:15:</p>
-        <p>- К/ф "Черепаха"</p>
-        <p>15:15:</p>
-        <p>- К/Ф "ЭГО"</p>
-        <p>15:40:</p>
-        <p>- "ВЕЛОМАРШРУТ" - Некрасовка, Косино-Ухтомский, Новокосино</p>
-        <p>16:00:</p>
+        <p>10:35:</p>
         <p>- К/Ф "Карачун"</p>
-        <p>16:20:</p>
-        <p>- Дом забытых вещей</p>
-        <p>16:35:</p>
-        <p>- К/ф "Черепаха"</p>
-        <p>С 17:00:</p>
+        <p>11:15:</p>
         <p>Продолжение вещания</p>
-        <p>19:10:</p>
+        <p>11:40:</p>
         <p>- Дом забытых вещей</p>
+        <p>12:40:</p>
+        <p>- Чудеса случаются</p>
+        <p>14:25:</p>
+        <p>- Страйдер (18+)</p>
+        <p>14:35:</p>
+        <p>- Страйдер 2 (18+)</p>
+        <p>14:45:</p>
+        <p>- Семейная связь</p>
+        <p>16:40:</p>
+        <p>- Дом забытых вещей</p>
+        <p>16:55:</p>
+        <p>- Там, где горы встречаются с морем</p>
+        <p>17:30:</p>
+        <p>Продолжение вещания</p>
+        <p>18:35:</p>
+        <p>- Импульс - шаг в будущее</p>
+        <p>19:30:</p>
+        <p>- Страйдер (18+)</p>
+        <p>19:40:</p>
+        <p>- Страйдер 2 (18+)</p>
         <p>20:50:</p>
-        <p>- К/ф "Беседа"</p>
-        <p>21:36:</p>
+        <p>Там, где горы встречаются с морем <mark>ПО ПЯТНИЦАМ</mark></p>
+        <p>21:30:</p>
         <p>- "ВЕЛОМАРШРУТ" - Некрасовка, Косино-Ухтомский, Новокосино</p>
+        <p>22:05:</p>
+        <p>- Дом забытых вещей</p>
         <p>22:15:</p>
-        <p>- Короткометражный фильм "Семейная связь"</p>
-        <p>С 22:30:</p>
         <p>Продолжение вещания</p>
         <!-- <p>10:00:</p>
         <p>- Дом забытых вещей</p>
