--- a/index.html
+++ b/index.html
@@ -164,50 +164,56 @@ window.onclick = function(event) {
 </div>
 <div class="title1">
         <b>Расписание на 19.09.2025</b> 
-        <p>11:00:</p>
+        <p>9:00:</p>
         <p>- Неудачные дубли телепередачи "ВЕЛОМАРШРУТ"</p>
-        <p>11:02:</p>
+        <p>9:02:</p>
         <p>- "ВЕЛОМАРШРУТ" - Некрасовка, Косино-Ухтомский, Новокосино</p>
-        <p>С 11:20:</p>
+        <p>С 9:20:</p>
         <p>- Фильм "Чудеса случаются"</p>
         <p>- Короткометражный фильм "Страйдер" (18+)</p>
         <p>- "Импульс - шаг в будущее"</p>
         <p>- Короткометражный фильм "Беседа"</p>
         <p>- Короткометражный фильм "Скейт"</p>
-        <p>12:45:</p>
+        <p>10:45:</p>
         <p>- К/Ф "ЭГО"</p>
-        <p>13:10:</p>
+        <p>11:10:</p>
         <p>- "ВЕЛОМАРШРУТ" - Некрасовка, Косино-Ухтомский, Новокосино</p>
-        <p>13:25:</p>
+        <p>11:25:</p>
         <p>- Дом забытых вещей</p>
-        <p>13:35:</p>
+        <p>11:35:</p>
         <p>- К/Ф "Карачун"</p>
-        <p>14:15:</p>
+        <p>12:15:</p>
         <p>Продолжение вещания</p>
-        <p>14:40:</p>
+        <p>12:40:</p>
         <p>- Дом забытых вещей</p>
-        <p>15:40:</p>
+        <p>13:40:</p>
         <p>- Чудеса случаются</p>
-        <p>17:25:</p>
+        <p>15:25:</p>
         <p>- Страйдер (18+)</p>
-        <p>17:35:</p>
+        <p>15:35:</p>
         <p>- Страйдер 2 (18+)</p>
-        <p>17:45:</p>
+        <p>15:45:</p>
         <p>- Семейная связь</p>
-        <p>19:40:</p>
+        <p>17:40:</p>
         <p>- Дом забытых вещей</p>
-        <p>19:55:</p>
+        <p>17:55:</p>
         <p>- Там, где горы встречаются с морем</p>
-        <p>20:30:</p>
+        <p>18:30:</p>
         <p>Продолжение вещания</p>
-        <p>21:35:</p>
+        <p>19:35:</p>
         <p>- Импульс - шаг в будущее</p>
-        <p>22:30:</p>
+        <p>20:30:</p>
         <p>- Страйдер (18+)</p>
-        <p>22:40:</p>
+        <p>20:40:</p>
         <p>- Страйдер 2 (18+)</p>
-        <p>23:50:</p>
+        <p>21:50:</p>
         <p>Там, где горы встречаются с морем <mark>ПО ПЯТНИЦАМ</mark></p>
+        <p>22:30:</p>
+        <p>- "ВЕЛОМАРШРУТ" - Некрасовка, Косино-Ухтомский, Новокосино</p>
+        <p>23:05:</p>
+        <p>- Дом забытых вещей</p>
+        <p>23:15:</p>
+        <p>Продолжение вещания</p>
 
 
 <!-- <div class="photo"><img src="/theme/images/Rpr29qovqzc.jpg"></div> -->
