--- a/livetv.html
+++ b/livetv.html
@@ -158,62 +158,8 @@ window.onclick = function(event) {
           <iframe src="https://vk.com/video_ext.php?oid=-214689242&id=456239083&hd=1&autoplay=1" width="640" height="360" allow="encrypted-media; fullscreen; picture-in-picture; screen-wake-lock;" frameborder="0" allowfullscreen></iframe>
      </div>
      <div class="title1">
-        <b>Расписание на 20.09.2025</b> 
-        <p>8:00 МСК:</p>
-        <p>- Дом забытых вещей</p>
-        <p>8:15 МСК:</p>
-        <p>- "ВЕЛОМАРШРУТ" - Некрасовка, Косино-Ухтомский, Новокосино</p>
-        <p>8:35 МСК:</p>
-        <p>- К/ф "Черепаха"</p>
-        <p>С 9:00 МСК:</p>
-        <p>- Фильм "Чудеса случаются"</p>
-        <p>- Короткометражный фильм "Страйдер"</p>
-        <p>- Короткометражный фильм "Семейная связь"</p>
-        <p>- "Импульс - шаг в будущее"</p>
-        <p>- Короткометражный фильм "Беседа"</p>
-        <p>- Короткометражный фильм "Скейт"</p>
-        <p>10:25 МСК:</p>
-        <p>- К/Ф "ЭГО"</p>
-        <p>10:45 МСК:</p>
-        <p>- "ВЕЛОМАРШРУТ" - Некрасовка, Косино-Ухтомский, Новокосино</p>
-        <p>11:00 МСК:</p>
-        <p>- К/Ф "Карачун"</p>
-        <p>11:25 МСК:</p>
-        <p>- Дом забытых вещей</p>
-        <p>С 11:40 МСК:</p>
-        <p>- Фильм "Чудеса случаются"</p>
-        <p>- Короткометражный фильм "Страйдер"</p>
-        <p>- Короткометражный фильм "Семейная связь"</p>
-        <p>- "Импульс - шаг в будущее"</p>
-        <p>- Короткометражный фильм "Беседа"</p>
-        <p>- Короткометражный фильм "Скейт"</p>
-        <p>13:25 МСК:</p>
-        <p>- Семейная связь</p>
-        <p>14:15 МСК:</p>
-        <p>- К/ф "Черепаха"</p>
-        <p>16:15 МСК:</p>
-        <p>- К/Ф "ЭГО"</p>
-        <p>16:40 МСК:</p>
-        <p>- "ВЕЛОМАРШРУТ" - Некрасовка, Косино-Ухтомский, Новокосино</p>
-        <p>17:00 МСК:</p>
-        <p>- К/Ф "Карачун"</p>
-        <p>17:20 МСК:</p>
-        <p>- Дом забытых вещей</p>
-        <p>17:35 МСК:</p>
-        <p>- К/ф "Черепаха"</p>
-        <p>С 18:00 МСК:</p>
-        <p>Продолжение вещания</p>
-        <p>20:10 МСК:</p>
-        <p>- Дом забытых вещей</p>
-        <p>21:50 МСК:</p>
-        <p>- К/ф "Беседа"</p>
-        <p>22:36 МСК:</p>
-        <p>- "ВЕЛОМАРШРУТ" - Некрасовка, Косино-Ухтомский, Новокосино</p>
-        <p>23:15 МСК:</p>
-        <p>- Короткометражный фильм "Семейная связь"</p>
-        <p>С 23:30 МСК:</p>
-        <p>Продолжение вещания</p>
-        <!-- <p>10:00:</p>
+        <b>Расписание на 21.09.2025</b> 
+        <p>10:00:</p>
         <p>- Дом забытых вещей</p>
         <p>10:15:</p>
         <p>- "ВЕЛОМАРШРУТ" - Некрасовка, Косино-Ухтомский, Новокосино</p>
@@ -261,7 +207,7 @@ window.onclick = function(event) {
         <p>- Дом забытых вещей</p>
         <p>23:50:</p>
         <p>- К/ф "Беседа"</p>
-        <b>Расписание на 14.09.2025</b> 
+<!--         <b>Расписание на 14.09.2025</b> 
         <p>00:45:</p>
         <p>- "ВЕЛОМАРШРУТ" - Некрасовка, Косино-Ухтомский, Новокосино</p>
         <p>00:55:</p>
