--- a/index.html
+++ b/index.html
@@ -163,55 +163,48 @@ window.onclick = function(event) {
 
 </div>
 <div class="title1">
-        <b>Расписание на 21.09.2025</b> 
-        <p>10:00:</p>
-        <p>- Дом забытых вещей</p>
-        <p>10:15:</p>
+        <b>Расписание на 22.09.2025</b> 
+        <p>10:25:</p>
+        <p>- К/Ф "ЭГО"</p>
+        <p>10:45:</p>
         <p>- "ВЕЛОМАРШРУТ" - Некрасовка, Косино-Ухтомский, Новокосино</p>
-        <p>10:35:</p>
-        <p>- К/ф "Черепаха"</p>
-        <p>С 12:00:</p>
+        <p>11:00:</p>
+        <p>- К/Ф "Карачун"</p>
+        <p>11:25:</p>
+        <p>- Дом забытых вещей</p>
+        <p>С 11:40:</p>
         <p>- Фильм "Чудеса случаются"</p>
         <p>- Короткометражный фильм "Страйдер"</p>
         <p>- Короткометражный фильм "Семейная связь"</p>
         <p>- "Импульс - шаг в будущее"</p>
         <p>- Короткометражный фильм "Беседа"</p>
         <p>- Короткометражный фильм "Скейт"</p>
-        <p>12:25:</p>
-        <p>- К/Ф "ЭГО"</p>
-        <p>12:45:</p>
-        <p>- "ВЕЛОМАРШРУТ" - Некрасовка, Косино-Ухтомский, Новокосино</p>
-        <p>13:00:</p>
-        <p>- К/Ф "Карачун"</p>
         <p>13:25:</p>
-        <p>- Дом забытых вещей</p>
-        <p>С 13:40:</p>
-        <p>- Фильм "Чудеса случаются"</p>
-        <p>- Короткометражный фильм "Страйдер"</p>
-        <p>- Короткометражный фильм "Семейная связь"</p>
-        <p>- "Импульс - шаг в будущее"</p>
-        <p>- Короткометражный фильм "Беседа"</p>
-        <p>- Короткометражный фильм "Скейт"</p>
-        <p>15:25:</p>
         <p>- Семейная связь</p>
+        <p>14:15:</p>
+        <p>- К/ф "Черепаха"</p>
         <p>16:15:</p>
-        <p>- К/ф "Черепаха"</p>
-        <p>18:15:</p>
         <p>- К/Ф "ЭГО"</p>
-        <p>18:40:</p>
+        <p>16:40:</p>
         <p>- "ВЕЛОМАРШРУТ" - Некрасовка, Косино-Ухтомский, Новокосино</p>
-        <p>19:00:</p>
+        <p>17:00:</p>
         <p>- К/Ф "Карачун"</p>
-        <p>19:20:</p>
+        <p>17:20:</p>
         <p>- Дом забытых вещей</p>
-        <p>19:35:</p>
+        <p>17:35:</p>
         <p>- К/ф "Черепаха"</p>
-        <p>С 20:00:</p>
+        <p>С 18:00:</p>
         <p>Продолжение вещания</p>
-        <p>22:10:</p>
+        <p>20:10:</p>
         <p>- Дом забытых вещей</p>
-        <p>23:50:</p>
+        <p>21:50:</p>
         <p>- К/ф "Беседа"</p>
+        <p>22:36:</p>
+        <p>- "ВЕЛОМАРШРУТ" - Некрасовка, Косино-Ухтомский, Новокосино</p>
+        <p>23:15:</p>
+        <p>- Короткометражный фильм "Семейная связь"</p>
+        <p>С 23:30:</p>
+        <p>Продолжение вещания</p>
 
 
 <!-- <div class="photo"><img src="/theme/images/Rpr29qovqzc.jpg"></div> -->
