--- a/index.html
+++ b/index.html
@@ -163,47 +163,42 @@ window.onclick = function(event) {
 
 </div>
 <div class="title1">
-        <b>Расписание на 22.09.2025</b> 
+        <b>Расписание на 24.09.2025</b> 
         <p>10:25:</p>
-        <p>- К/Ф "ЭГО"</p>
-        <p>10:45:</p>
-        <p>- "ВЕЛОМАРШРУТ" - Некрасовка, Косино-Ухтомский, Новокосино</p>
-        <p>11:00:</p>
-        <p>- К/Ф "Карачун"</p>
-        <p>11:25:</p>
         <p>- Дом забытых вещей</p>
-        <p>С 11:40:</p>
-        <p>- Фильм "Чудеса случаются"</p>
-        <p>- Короткометражный фильм "Страйдер"</p>
-        <p>- Короткометражный фильм "Семейная связь"</p>
-        <p>- "Импульс - шаг в будущее"</p>
-        <p>- Короткометражный фильм "Беседа"</p>
-        <p>- Короткометражный фильм "Скейт"</p>
-        <p>13:25:</p>
-        <p>- Семейная связь</p>
-        <p>14:15:</p>
-        <p>- К/ф "Черепаха"</p>
-        <p>16:15:</p>
-        <p>- К/Ф "ЭГО"</p>
-        <p>16:40:</p>
-        <p>- "ВЕЛОМАРШРУТ" - Некрасовка, Косино-Ухтомский, Новокосино</p>
-        <p>17:00:</p>
+        <p>10:35:</p>
         <p>- К/Ф "Карачун"</p>
-        <p>17:20:</p>
-        <p>- Дом забытых вещей</p>
-        <p>17:35:</p>
-        <p>- К/ф "Черепаха"</p>
-        <p>С 18:00:</p>
+        <p>11:15:</p>
         <p>Продолжение вещания</p>
-        <p>20:10:</p>
+        <p>11:40:</p>
         <p>- Дом забытых вещей</p>
-        <p>21:50:</p>
-        <p>- К/ф "Беседа"</p>
-        <p>22:36:</p>
+        <p>12:40:</p>
+        <p>- Чудеса случаются</p>
+        <p>14:25:</p>
+        <p>- Страйдер (18+)</p>
+        <p>14:35:</p>
+        <p>- Страйдер 2 (18+)</p>
+        <p>14:45:</p>
+        <p>- Семейная связь</p>
+        <p>16:40:</p>
+        <p>- Дом забытых вещей</p>
+        <p>16:55:</p>
+        <p>- Там, где горы встречаются с морем</p>
+        <p>17:30:</p>
+        <p>Продолжение вещания</p>
+        <p>18:35:</p>
+        <p>- Импульс - шаг в будущее</p>
+        <p>19:30:</p>
+        <p>- Страйдер (18+)</p>
+        <p>19:40:</p>
+        <p>- Страйдер 2 (18+)</p>
+        <p>20:50:</p>
+        <p>Там, где горы встречаются с морем</p>
+        <p>21:30:</p>
         <p>- "ВЕЛОМАРШРУТ" - Некрасовка, Косино-Ухтомский, Новокосино</p>
-        <p>23:15:</p>
-        <p>- Короткометражный фильм "Семейная связь"</p>
-        <p>С 23:30:</p>
+        <p>22:05:</p>
+        <p>- Дом забытых вещей</p>
+        <p>22:15:</p>
         <p>Продолжение вещания</p>
 
 
