--- a/index.html
+++ b/index.html
@@ -163,15 +163,20 @@ window.onclick = function(event) {
 
 </div>
 <div class="title1">
-        <b>Расписание на 25.09.2025</b> 
+        <b>Расписание на 27.09.2025</b> 
         <p>8:00:</p>
         <p>- Дом забытых вещей</p>
         <p>8:15:</p>
         <p>- "ВЕЛОМАРШРУТ" - Некрасовка, Косино-Ухтомский, Новокосино</p>
         <p>8:35:</p>
         <p>- К/ф "Черепаха"</p>
-        <p>9:00:</p>
+        <p>С 9:00:</p>
         <p>- Фильм "Чудеса случаются"</p>
+        <p>- Короткометражный фильм "Страйдер"</p>
+        <p>- Короткометражный фильм "Семейная связь"</p>
+        <p>- "Импульс - шаг в будущее"</p>
+        <p>- Короткометражный фильм "Беседа"</p>
+        <p>- Короткометражный фильм "Скейт"</p>
         <p>10:25:</p>
         <p>- К/Ф "ЭГО"</p>
         <p>10:45:</p>
@@ -180,8 +185,13 @@ window.onclick = function(event) {
         <p>- К/Ф "Карачун"</p>
         <p>11:25:</p>
         <p>- Дом забытых вещей</p>
-        <p>11:55:</p>
+        <p>С 11:40:</p>
+        <p>- Фильм "Чудеса случаются"</p>
         <p>- Короткометражный фильм "Страйдер"</p>
+        <p>- Короткометражный фильм "Семейная связь"</p>
+        <p>- "Импульс - шаг в будущее"</p>
+        <p>- Короткометражный фильм "Беседа"</p>
+        <p>- Короткометражный фильм "Скейт"</p>
         <p>13:25:</p>
         <p>- Семейная связь</p>
         <p>14:15:</p>
