--- a/livetv.html
+++ b/livetv.html
@@ -158,15 +158,20 @@ window.onclick = function(event) {
           <iframe src="https://vk.com/video_ext.php?oid=-214689242&id=456239083&hd=1&autoplay=1" width="640" height="360" allow="encrypted-media; fullscreen; picture-in-picture; screen-wake-lock;" frameborder="0" allowfullscreen></iframe>
      </div>
      <div class="title1">
-        <b>Расписание на 25.09.2025</b> 
+        <b>Расписание на 27.09.2025</b> 
         <p>8:00:</p>
         <p>- Дом забытых вещей</p>
         <p>8:15:</p>
         <p>- "ВЕЛОМАРШРУТ" - Некрасовка, Косино-Ухтомский, Новокосино</p>
         <p>8:35:</p>
         <p>- К/ф "Черепаха"</p>
-        <p>9:00:</p>
+        <p>С 9:00:</p>
         <p>- Фильм "Чудеса случаются"</p>
+        <p>- Короткометражный фильм "Страйдер"</p>
+        <p>- Короткометражный фильм "Семейная связь"</p>
+        <p>- "Импульс - шаг в будущее"</p>
+        <p>- Короткометражный фильм "Беседа"</p>
+        <p>- Короткометражный фильм "Скейт"</p>
         <p>10:25:</p>
         <p>- К/Ф "ЭГО"</p>
         <p>10:45:</p>
@@ -175,8 +180,13 @@ window.onclick = function(event) {
         <p>- К/Ф "Карачун"</p>
         <p>11:25:</p>
         <p>- Дом забытых вещей</p>
-        <p>11:55:</p>
+        <p>С 11:40:</p>
+        <p>- Фильм "Чудеса случаются"</p>
         <p>- Короткометражный фильм "Страйдер"</p>
+        <p>- Короткометражный фильм "Семейная связь"</p>
+        <p>- "Импульс - шаг в будущее"</p>
+        <p>- Короткометражный фильм "Беседа"</p>
+        <p>- Короткометражный фильм "Скейт"</p>
         <p>13:25:</p>
         <p>- Семейная связь</p>
         <p>14:15:</p>
