--- a/livetv.html
+++ b/livetv.html
@@ -158,61 +158,55 @@ window.onclick = function(event) {
           <iframe src="https://vk.com/video_ext.php?oid=-214689242&id=456239083&hd=1&autoplay=1" width="640" height="360" allow="encrypted-media; fullscreen; picture-in-picture; screen-wake-lock;" frameborder="0" allowfullscreen></iframe>
      </div>
      <div class="title1">
-        <b>Расписание на 27.09.2025</b> 
-        <p>8:00:</p>
-        <p>- Дом забытых вещей</p>
-        <p>8:15:</p>
+        <b>Расписание на 28.09.2025</b> 
+        <p>10:02:</p>
         <p>- "ВЕЛОМАРШРУТ" - Некрасовка, Косино-Ухтомский, Новокосино</p>
-        <p>8:35:</p>
+        <p>10:20:</p>
         <p>- К/ф "Черепаха"</p>
-        <p>С 9:00:</p>
+        <p>С 10:45:</p>
         <p>- Фильм "Чудеса случаются"</p>
         <p>- Короткометражный фильм "Страйдер"</p>
         <p>- Короткометражный фильм "Семейная связь"</p>
         <p>- "Импульс - шаг в будущее"</p>
         <p>- Короткометражный фильм "Беседа"</p>
         <p>- Короткометражный фильм "Скейт"</p>
-        <p>10:25:</p>
-        <p>- К/Ф "ЭГО"</p>
-        <p>10:45:</p>
-        <p>- "ВЕЛОМАРШРУТ" - Некрасовка, Косино-Ухтомский, Новокосино</p>
-        <p>11:00:</p>
-        <p>- К/Ф "Карачун"</p>
-        <p>11:25:</p>
+        <p>12:00:</p>
         <p>- Дом забытых вещей</p>
-        <p>С 11:40:</p>
+        <p>12:10:</p>
+        <p>- К/Ф "Скейт"</p>
+        <p>12:25:</p>
+        <p>- К/Ф "ЭГО"</p>
+        <p>12:45:</p>
+        <p>- "ВЕЛОМАРШРУТ" - Некрасовка, Косино-Ухтомский, Новокосино</p>
+        <p>13:05:</p>
+        <p>- К/Ф "Карачун"</p>
+        <p>С 13:30:</p>
         <p>- Фильм "Чудеса случаются"</p>
         <p>- Короткометражный фильм "Страйдер"</p>
         <p>- Короткометражный фильм "Семейная связь"</p>
         <p>- "Импульс - шаг в будущее"</p>
         <p>- Короткометражный фильм "Беседа"</p>
         <p>- Короткометражный фильм "Скейт"</p>
-        <p>13:25:</p>
-        <p>- Семейная связь</p>
-        <p>14:15:</p>
+        <p>16:00:</p>
         <p>- К/ф "Черепаха"</p>
-        <p>16:15:</p>
+        <p>16:25:</p>
+        <p>- Дом забытых вещей</p>
+        <p>18:40:</p>
         <p>- К/Ф "ЭГО"</p>
-        <p>16:40:</p>
+        <p>19:00:</p>
         <p>- "ВЕЛОМАРШРУТ" - Некрасовка, Косино-Ухтомский, Новокосино</p>
-        <p>17:00:</p>
+        <p>19:20:</p>
         <p>- К/Ф "Карачун"</p>
-        <p>17:20:</p>
-        <p>- Дом забытых вещей</p>
-        <p>17:35:</p>
+        <p>19:45:</p>
+        <p>- Реальность полёта <mark>По воскресеньям</mark></p>
+        <p>20:30:</p>
         <p>- К/ф "Черепаха"</p>
-        <p>С 18:00:</p>
+        <p>С 20:50:</p>
         <p>Продолжение вещания</p>
-        <p>20:10:</p>
+        <p>21:45:</p>
         <p>- Дом забытых вещей</p>
-        <p>21:50:</p>
-        <p>- К/ф "Беседа"</p>
-        <p>22:36:</p>
-        <p>- "ВЕЛОМАРШРУТ" - Некрасовка, Косино-Ухтомский, Новокосино</p>
-        <p>23:15:</p>
-        <p>- Короткометражный фильм "Семейная связь"</p>
-        <p>С 23:30:</p>
-        <p>Продолжение вещания</p>
+        <p>22:20:</p>
+        <p>- К/ф "Семейная связь"</p>
         <!-- <p>10:00:</p>
         <p>- Дом забытых вещей</p>
         <p>10:15:</p>
