--- a/index.html
+++ b/index.html
@@ -163,46 +163,46 @@ window.onclick = function(event) {
 
 </div>
 <div class="title1">
-        <b>Расписание на 08.10.2025</b> 
-        <p>9:45:</p>
-        <p>- К/Ф "ЭГО"</p>
-        <p>10:10:</p>
-        <p>- "ВЕЛОМАРШРУТ" - Некрасовка, Косино-Ухтомский, Новокосино</p>
-        <p>10:25:</p>
+        <b>Расписание на 10.10.2025</b>
+        <p>10:45:</p>
+        <p>- ЭГО</p>
+        <p>11:10:</p>
+        <p>- ВЕЛОМАРШРУТ - Некрасовка, Косино-Ухтомский, Новокосино</p>
+        <p>11:25:</p>
         <p>- Дом забытых вещей</p>
-        <p>10:35:</p>
-        <p>- К/Ф "Карачун"</p>
-        <p>11:15:</p>
+        <p>11:35:</p>
+        <p>- Карачун</p>
+        <p>12:15:</p>
         <p>Продолжение вещания</p>
-        <p>11:40:</p>
-        <p>- Дом забытых вещей</p>
         <p>12:40:</p>
+        <p>- Дом забытых вещей</p>
+        <p>13:40:</p>
         <p>- Чудеса случаются</p>
-        <p>14:25:</p>
+        <p>15:25:</p>
         <p>- Страйдер (18+)</p>
-        <p>14:35:</p>
+        <p>15:35:</p>
         <p>- Страйдер 2 (18+)</p>
-        <p>14:45:</p>
+        <p>15:45:</p>
         <p>- Семейная связь</p>
-        <p>16:40:</p>
+        <p>17:40:</p>
         <p>- Дом забытых вещей</p>
-        <p>16:55:</p>
+        <p>17:55:</p>
         <p>- Там, где горы встречаются с морем</p>
-        <p>17:30:</p>
+        <p>18:30:</p>
         <p>Продолжение вещания</p>
-        <p>18:35:</p>
+        <p>19:35:</p>
         <p>- Импульс - шаг в будущее</p>
-        <p>19:30:</p>
+        <p>20:30:</p>
         <p>- Страйдер (18+)</p>
-        <p>19:40:</p>
+        <p>20:40:</p>
         <p>- Страйдер 2 (18+)</p>
-        <p>20:50:</p>
-        <p>Там, где горы встречаются с морем</p>
-        <p>21:30:</p>
-        <p>- "ВЕЛОМАРШРУТ" - Некрасовка, Косино-Ухтомский, Новокосино</p>
-        <p>22:05:</p>
+        <p>21:50:</p>
+        <p>Там, где горы встречаются с морем <mark>ПО ПЯТНИЦАМ</mark></p>
+        <p>22:30:</p>
+        <p>- ВЕЛОМАРШРУТ - Некрасовка, Косино-Ухтомский, Новокосино</p>
+        <p>23:05:</p>
         <p>- Дом забытых вещей</p>
-        <p>22:15:</p>
+        <p>23:15:</p>
         <p>Продолжение вещания</p>
 
 
